  - snapshot3d() now defaults to writing to a temporary file
    instead of failing if no filename is given.
  - Both snapshot3d() and rgl.snapshot() now return the 
    output filename invisibly.
  - rglwidget() no longer tries to include both a snapshot and
    a WebGL scene:  it can only do one or the other.
  - Some bugs in thigmophobe3d, mergeVertices and 
    as.mesh3d.default have been fixed.
  - Moved development home from R-forge to Github.
  - Now builds the non-OpenGL DLL and puts it in inst/useNULL,
    so options(rgl.useNULL=TRUE) before loading rgl will cause
    to to not use X11 at all.
  - Made the startup code more resilient in case X11 isn't
    working.
  - Set up a drat repository to hold the unreleased webshot2
    package.

0.105.22:
  - Fixed error in new args to snapshot3d (reported by Tony Hirst:
    https://github.com/dmurdoch/rgl/issues/21 .)
  - Improved test for presence of WebGL (suggested by Git Demont, 
    https://github.com/dmurdoch/rgl/issues/31 ).
  - On macOS an interaction between rgl and the quartz() device
    caused a segfault (see issue #27).  Added workaround.
    (reported by Rich Heiberger, 
    https://github.com/dmurdoch/rgl/issues/27).
  - Fixed a bug affecting fat (lwd > 1) line segments in 
    rglwidget().
  - Add Biarch to DESCRIPTION so both architectures are built on 
    Windows.
  - A bug in the Makevars files caused builds using a 
    parallel make to fail.
  - A bug in conversion of displays to WebGL prevented planes
    from displaying properly.
  - In rglwidget(), background images could cause other parts of
    the display to disappear.

0.106.0
  - Changes for pkgdown compatibility have been added.  See
    the "Using rgl in pkgdown web sites".
  - The help pages have been edited to continue the 
    de-emphasization of rgl.* functions.
  - Changes have been made for compatibility with the 
    experimental Windows-UTF8 build of R.
  - Allowed infinite values for strip limits in filledContour3d.